fix alignment menu items

--- a/source/stylesheets/base.css
+++ b/source/stylesheets/base.css
@@ -239,6 +239,7 @@ hr.thick {
   color: white;
   font-family: "Korolev-Medium";
   font-size: 16px;
+  padding-top: 18px;
 }
 
 .navbar-default .navbar-nav>li>a:hover {
@@ -254,10 +255,10 @@ hr.thick {
 
 @media (min-width: 768px) {
   .sign-in-up-btn {
-    border: 1px solid white;
+    border: 2px solid white;
     border-radius: 5px;
     padding: 7px 18px !important;
-    margin-top: 7px;
+    margin-top: 9px;
     transition: all 0.2s;
   }
 
